force-app/main/default/objects/SEL_BatchStep__c/SEL_BatchStep__c.object-meta.xml
<CustomObject>
    <label>Batch Step</label>
    <nameField>
        <displayFormat>BAS{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>