force-app/main/default/objects/SEL_BatchStep__c/fields/SEL_BatchId__c.field-meta.xml
<CustomField>
    <fullName>SEL_BatchId__c</fullName>
    <label>Batch</label>
    <referenceTo>SEL_Batch__c</referenceTo>
    <relationshipLabel>Batch Steps</relationshipLabel>
    <relationshipName>SEL_BatchSteps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>