force-app/main/default/objects/SEL_BatchStep__c/fields/SEL_Class__c.field-meta.xml
<CustomField>
    <fullName>SEL_Class__c</fullName>
    <description>Batch class or identifier.</description>
    <label>Class</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>