force-app/main/default/objects/SEL_BatchStep__c/fields/SEL_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SEL_ErrorMessage__c</fullName>
    <description>In the event of failure, log the error message directly on the job that experienced failure.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>