force-app/main/default/objects/SEL_BatchStep__c/fields/SEL_Start__c.field-meta.xml
<CustomField>
    <fullName>SEL_Start__c</fullName>
    <description>The date and time the job started to run.</description>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>