force-app/main/default/objects/SEL_BatchStep__c/fields/SEL_Stop__c.field-meta.xml
<CustomField>
    <fullName>SEL_Stop__c</fullName>
    <description>The date and time the job stopped running.</description>
    <label>Stop</label>
    <type>DateTime</type>
</CustomField>