force-app/main/default/objects/SEL_BatchStep__c/fields/SEL_Summary__c.field-meta.xml
<CustomField>
    <fullName>SEL_Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>